# self-host-planning-poker

./: Dockerfile  README.md  index.yaml  renovate.json  self-host-planning-poker-v0.0.3.tgz  self-host-planning-poker-v0.0.4.tgz
.github/workflows/: pr-sizing.yaml  pr-title.yaml  publish.yml  tests.yml
angular/: angular.json  package-lock.json  package.json  tsconfig.json
angular/src/: index.html  main.ts
angular/src/app/navigation-bar/: navigation-bar.component.html
angular/src/app/navigation-bar/game-info/: nav-game-info.component.html
angular/src/app/navigation-bar/game-name/: nav-game-name.component.html
angular/src/app/navigation-bar/player-info/: nav-player-info.component.html
angular/src/app/ongoing-game/: current-game.service.ts
angular/src/app/ongoing-game/card-table/player-hand/: player-hand.component.html
angular/src/app/ongoing-game/turn-summary/: turn-summary.component.ts
angular/src/app/shared/game-form/: game-form.component.ts
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/db/: db.go  models.go
backend/internal/handlers/: game.go  models.go  requests.go
backend/internal/helpers/: helpers.go
backend/internal/models/: models.go
backend/internal/routes/: routes.go
backend/internal/sockets/: sockets.go
backend/templates/: index.html
charts/self-host-planning-poker/: Chart.yaml
flask/: pyproject.toml  requirements.txt
flask/test/: test_game.py  test_game_manager.py
