[project]
name = "self-host-planning-poker"
version = "0.0.1"
requires-python = "==3.13.*"
dependencies = [
    "bidict==0.23.1",
    "click==8.2.1",
    "coverage==7.9.1",
    "dnspython==2.7.0",
    "eventlet==0.40.0",
    "flask==2.3.3",
    "flask-cors==4.0.2",
    "flask-socketio==5.5.1",
    "greenlet==3.2.3",
    "gunicorn==21.2.0",
    "h11==0.16.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==2.1.5",
    "peewee==3.17.9",
    "python-engineio==4.12.2",
    "python-socketio==5.13.0",
    "six==1.17.0",
    "werkzeug==2.3.8",
    "wsproto==1.2.0",
    "zope-event==5.0",
    "zope-interface==6.4.post2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
